# rust-course

./: README.md
associated_type/: Cargo.toml
associated_type/src/: main.rs
closure/src/: main.rs
dyn_train/: Cargo.toml
dyn_train/src/: main.rs
expression_evaluation/src/: lib.rs
genric_trait/: Cargo.toml
genric_trait/src/: main.rs
logger/src/: main.rs
macros/: Cargo.toml
macros/examples/: enum_from.rs  my_try.rs  my_vec.rs
macros/src/: enum_from.rs  lib.rs
min/src/: lib.rs
rcli/: Cargo.toml
rcli/assets/: juventus.csv
rcli/src/: main.rs  opts.rs  process.rs
rcli/src/cli/: base64_opts.rs  csv_opts.rs  http_opts.rs  mod.rs
rcli/src/process/: base64_processor.rs  csv_processor.rs  http_processor.rs  mod.rs
read_write/: Cargo.toml
read_write/src/: main.rs
