[package]
name = "rcli"
authors = ["Flint"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.7"
base64 = "0.22.1"
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
axum = {version = "0.8.6", features = ["http2", "query", "tracing"]}